tests/data/smoke/smoke-batch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-batch-ingress1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - smoke-batch1.example.com
    secretName: smoke-secret
  rules:
  - host: smoke-batch1.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-batch-ingress2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - smoke-batch2.example.com
    secretName: smoke-secret
  rules:
  - host: smoke-batch2.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-batch-ingress3
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - smoke-batch3.example.com
    secretName: smoke-secret
  rules:
  - host: smoke-batch3.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-batch-ingress4
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - smoke-batch4.example.com
    secretName: smoke-secret
  rules:
  - host: smoke-batch4.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-batch-ingress5
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - smoke-batch5.example.com
    secretName: smoke-secret
  rules:
  - host: smoke-batch5.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-batch-ingress6
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - smoke-batch6.example.com
    secretName: smoke-secret
  rules:
  - host: smoke-batch6.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-batch-ingress7
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - smoke-batch7.example.com
    secretName: smoke-secret
  rules:
  - host: smoke-batch7.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
